--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:headed": "playwright test --headed"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.13.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "next": "^14.0.4",
