--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@monaco-editor/react": "^4.7.0",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
+    "monaco-editor": "^0.55.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-resizable-panels": "^4.0.15"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
