--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
+    "groq-sdk": "^0.37.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "monaco-editor": "^0.55.1",
@@ -23,7 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-resizable-panels": "^4.0.15"
+    "react-resizable-panels": "^4.0.15",
+    "recharts": "^3.6.0",
+    "sql.js": "^1.13.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
@@ -31,6 +34,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/sql.js": "^1.4.9",
     "autoprefixer": "^10.4.16",
     "playwright": "^1.57.0",
     "postcss": "^8.4.32",
