--- a/package.json
+++ b/package.json
@@ -12,26 +12,43 @@
     "test:headed": "playwright test --headed"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@google/generative-ai": "^0.24.1",
     "@monaco-editor/react": "^4.7.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@ricky0123/vad-web": "^0.0.30",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
     "groq-sdk": "^0.37.0",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.3",
     "jspdf": "^3.0.4",
     "monaco-editor": "^0.55.1",
     "next": "^14.0.4",
+    "next-auth": "^5.0.0-beta.30",
+    "pdf-parse": "^2.4.5",
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-resizable-panels": "^4.0.15",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.6.0",
+    "recordrtc": "^5.6.2",
+    "resend": "^6.6.0",
     "sql.js": "^1.13.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.10.6",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/sql.js": "^1.4.9",
