--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ GITHUB_SECRET="your-github-secret"
 # AI Services (existing)
 GROQ_API_KEY="your-groq-api-key"
 GOOGLE_API_KEY="your-google-api-key"
+
+# YouTube Data API
+NEXT_PUBLIC_YOUTUBE_API_KEY="your-youtube-api-key"
