--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@types/react-dom": "^18.2.18",
     "@types/sql.js": "^1.4.9",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.0.4",
     "playwright": "^1.57.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
